# sqlflite

./: .clang-format  .dockerignore  .gitignore  .gitmodules  Arrow_CMakeLists.txt.in  CMakeLists.txt  Dockerfile  Dockerfile-slim.ci  Dockerfile.ci  LICENSE  README.md  conda_env.yaml  docker_build_and_push.sh  requirements.txt
.github/workflows/: build-docker-images.yml  ci.yml
helm-chart/: Chart.yaml  install_helm_chart.sh  values.yaml
helm-chart/secrets/: README.md
helm-chart/secrets/opaque/: README.md
helm-chart/secrets/tls/: README.md
helm-chart/templates/: NOTES.txt  _helpers.tpl  global-secret.yaml  server-service.yaml  server-statefulset.yaml  tls-secret.yaml
macos/: entitlements.plist
queries/: h03.sql  h04.sql  h12.sql  h13.sql  h14.sql  h16.sql  h17.sql  h19.sql
queries/sqlite/: h01.sql  h02.sql  h05.sql  h06.sql  h07.sql  h08.sql  h09.sql  h10.sql  h11.sql  h15.sql  h18.sql  h20.sql  h21.sql  h22.sql
scripts/: build_arrow.sh  build_duckdb.sh  conda_build_arrow.sh  conda_get_duckdb.sh  create_duckdb_database_file.py  get_duckdb_database.sh  install_arrow.sh  install_duckdb.sh  move_data_to_duckdb.py  start_flight_sql.sh  start_flight_sql_slim.sh  start_sqlflite.sh  start_sqlflite_slim.sh  test_flight_sql.py  test_flight_sql.sh  test_sqlflite.py  test_sqlflite.sh
src/: FlightAuthHandler.h  flight_sql.cpp  flight_sql.cpp_OLD  flight_sql_client.cpp  flight_sql_library.cpp  flight_sql_library.h  flight_sql_security.cpp  flight_sql_security.h  flight_sql_server.cpp  sqlflite_client.cpp  sqlflite_server.cpp
src/duckdb/: duckdb_server.cpp  duckdb_server.h  duckdb_sql_info.cpp  duckdb_sql_info.h  duckdb_statement.cpp  duckdb_statement.h  duckdb_statement_batch_reader.cpp  duckdb_statement_batch_reader.h  duckdb_tables_schema_batch_reader.cpp  duckdb_tables_schema_batch_reader.h  duckdb_type_info.cpp
src/sqlite/: .clang-format  sqlite_server.cc  sqlite_server.h  sqlite_sql_info.cc  sqlite_sql_info.h  sqlite_statement.cc  sqlite_statement.h  sqlite_statement_batch_reader.cc  sqlite_statement_batch_reader.h  sqlite_tables_schema_batch_reader.cc  sqlite_tables_schema_batch_reader.h  sqlite_type_info.cc  sqlite_type_info.h
tls/: .gitignore  README.md  gen-certs.sh  v3_usr.cnf
